Fixed vertical scrolling on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -396,6 +396,7 @@ button {
 }
 @media (max-width: 576px) {
     html, body {
+        overflow-y: scroll;
         overflow-x: hidden;
         position: relative;
         width: 100%;
